# WinHacks2026

wh2026-backend/: main.py  package-lock.json  pyproject.toml  run.ps1  run.sh  test.py
wh2026-backend/wh2026_server/: data.py  main.py  questions.py
wh2026-client/: index.html  package-lock.json  package.json
wh2026-client/src/: App.svelte  app.css  main.ts  minireset.css
wh2026-client/src/lib/: Game.svelte  JoinHost.svelte  Lobby.svelte
